- removing fancy footer func due to ie and firefox buggies, general complications with z-index and overflows - changing styling on flyout - correcting a few small component errors

--- a/wp-content/themes/nationswell/css/mobile.css
+++ b/wp-content/themes/nationswell/css/mobile.css
@@ -2819,7 +2819,7 @@ body.panel-open #page-header .more-stories-toggle {
 
 /* line 1, ../scss/partials/mobile/_footer.scss */
 #page-footer {
-  height: 59.2rem;
+  height: 66rem;
   width: 100%;
 }
 
