--- a/wp-content/themes/nationswell/scss/partials/desktop/_structure.scss
+++ b/wp-content/themes/nationswell/scss/partials/desktop/_structure.scss
@@ -6,6 +6,7 @@
 }
 
 // force chrome bug: hardware acceleration and redraw
+/*
 html *:not(svg) {
-  @include transform(translate3d(0,0,0));
-}
+  @include transform(translateZ(0));
+}*/
